# modu_llm5

001_chatbot/: PRJ01_W1_001_Python_Clean_Code.ipynb  PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_004_LangSmith_LCEL.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_002_Simple_RAG_Pipeline.ipynb  pyproject.toml
001_chatbot/chroma_db/: chroma.sqlite3
001_chatbot/data/: housing_faq_formatted.json
001_chatbot/project01_test/: PRJ01_W1.md  PRJ01_W1_002.ipynb  PRJ01_W1_003_LangChain.ipynb  PRJ01_W1_005.ipynb  TravelPlanner_20260207_이혜원.ipynb
001_chatbot/project01_test/another people/: PRJ01_W1_Gradio_Travel_Planner_Chatbot_20260207_김정아.ipynb  TravelPlanner_20260207_이민하.ipynb
001_chatbot/project01_test/another_people/: Travelplanner_260207_유재혁.py
001_chatbot/project02_test/: PRJ01_W2_001.ipynb  PRJ01_W2_002.ipynb  PRJ01_W2_003.ipynb  PRJ01_W2_004.ipynb  PRJ01_W2_005.ipynb  PRJ01_W2_006.ipynb  week02_NativeRAG_20260221_이혜원.ipynb
001_chatbot/project02_test/another_people/: PRJ01_W2_과제_정성철.ipynb  W2_NaiveRAG_20260222_이호성.ipynb  week2_NaiveRAG_20260221_이민하.ipynb
001_chatbot/projtext03_test/: FAQ_System_20260228_이혜원.ipynb  PRJ01_W3.md  PRJ01_W3_001.ipynb
001_chatbot/week02/: PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_003_Document_Loader.ipynb  PRJ01_W2_004_Text_Splitter.ipynb  PRJ01_W2_005_Embedding_Model.ipynb  PRJ01_W2_006_Vectorstore.ipynb  PRJ01_W2_007_Retriever.ipynb
001_chatbot/week03/: PRJ01_W3_001_Prompt_Engineering_Basic.ipynb  PRJ01_W3_002_Prompt_Engineering_Fewshot.ipynb  PRJ01_W3_003_Prompt_Engineering_CoT.ipynb  PRJ01_W3_004_Langfuse_Prompt_Management.ipynb  PRJ01_W3_005_Chat_History.ipynb  PRJ01_W3_006_Housing_FAQ_Chatbot.ipynb
test/: pyproject.toml  test.ipynb
