[project]
name = "001-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gensim>=4.4.0",
    "gradio>=6.5.1",
    "ipykernel>=7.1.0",
    "kiwipiepy>=0.22.2",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
